# Scholar-Explorer

./: .gitignore  Readme.md
projects/skill-flow/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  acc_system.py  package-lock.json  package.json  pyproject.toml  simulation.py  tuning_results.yaml  wait_and_test.sh
projects/skill-flow/agent-conv/: skillflow_exp.md
projects/skill-flow/analysis/: README.md  __init__.py
projects/skill-flow/analysis/comparison/: compare_conditions.py  compare_retrievers.py  compare_runs.py
projects/skill-flow/analysis/comparison/utils/: display_conditions.py  display_stats.py  loader.py
projects/skill-flow/analysis/results/: f2_plot_quality_proxies.py  f3_plot_query_impact.py  f4_plot_skill_dist.py  generate-paper-assets.sh  t10_11_generate_reranker_comparison.py  t12_generate_excluded_tasks.py  t13_14_15_generate_case_studies.py  t1_generate_results.py  t2_generate_adoption.py  t3_generate_retrieval_stages.py  t4_generate_stage_ablation.py  t5_generate_latency.py  t6_generate_corpus_stats.py  t7_generate_query_examples.py  t8_9_generate_retriever_comparison.py
projects/skill-flow/analysis/results/utils/: __init__.py  adoption_utils.py  f3_data.py  f3_panels.py  format_utils.py  fusion_utils.py  latency_utils.py  latex_utils.py  quality_comparison_utils.py  quality_plot_utils.py  quality_utils.py  skill_utils.py
projects/skill-flow/analysis/stats/: __init__.py  benchmark_stats.py  bootstrap.py  proportions.py  retrieval_stats.py  types.py
projects/skill-flow/analysis/utils/: find_skill_patterns.py
projects/skill-flow/benchmark/: README.md  __init__.py
projects/skill-flow/benchmark/agents/: __init__.py  base.py  copilot_runner.py  skillflow_injection_agent.py  skillflow_mcp_agent.py  skillflow_mcp_cached_agent.py
projects/skill-flow/benchmark/agents/instructions/: default.j2  (+5 more)
projects/skill-flow/benchmark/config/: default.json
projects/skill-flow/benchmark/core/: __init__.py  commands.py  config.py  display.py  paths.py  runner.py  utils.py
projects/skill-flow/benchmark/scripts/: __init__.py  cli.py  mcp-golden.sh
projects/skill-flow/data/scripts/: setup-data.sh
projects/skill-flow/mcp_servers/: __init__.py  dummy_server.py  skillflow_server.py  skillsbench_server.py
projects/skill-flow/mcp_servers/scripts/: start-ngrok.sh  start-skillflow-server-cached.sh  start-skillflow-server.sh
projects/skill-flow/mcp_servers/utils/: server_helpers.py  skill_loader.py
projects/skill-flow/paper/: .gitignore  main.bib  main.tex
projects/skill-flow/paper/scripts/: init-submissions.sh  push-overleaf.sh
projects/skill-flow/paper/tables/: 10_reranker_comparison.tex  11_deep_reranker_config.tex  12_excluded_tasks.tex  13_case_study_1.tex  14_case_study_2.tex  15_case_study_3.tex  1_results.tex  2_adoption.tex  3_retrieval_stages.tex  4_stage_ablation.tex  5_latency.tex  6_corpus_stats.tex  7_query_examples.tex  8_retriever_comparison.tex  9_retriever_query_config.tex
projects/skill-flow/scripts/: build_synthetic_index.py  print_metrics.py  run-latency-experiments.py  run-skillflow-local-repro.sh  run_m5_with_retry.sh  setup-claude-code.sh  setup-git-hooks.sh
projects/skill-flow/skill_crawler/: __init__.py  __main__.py  cli.py  config.py
projects/skill-flow/skill_crawler/commands/: __init__.py  crawl.py
projects/skill-flow/skill_crawler/config/: config.json
projects/skill-flow/skill_crawler/crawlers/: __init__.py  base.py
projects/skill-flow/skill_crawler/downloaders/: __init__.py  github.py
projects/skill-flow/skill_crawler/models/: __init__.py  skill.py  state.py
projects/skill-flow/skill_crawler/storage/: __init__.py  manager.py
projects/skill-flow/skill_crawler/utils/: __init__.py  http.py  progress.py
projects/skill-flow/skill_flow/: cli.py  copilot_client.py
projects/skill-flow/skill_flow/config/: __init__.py  ablation_bm25.json  ablation_stage12.json  ablation_stage1_only.json  default.json  default_eval.json  default_eval_external.json  eval_external_m5.json  eval_external_m5_stage1only.json  local-skillflow-offline.json  local-skillflow.json  stage12_only.json
projects/skill-flow/skill_flow/corpus/: loader.py
projects/skill-flow/skill_flow/eval/: models.py  runner.py  runner_stages.py
projects/skill-flow/skill_flow/index/: builder.py  encoder.py
projects/skill-flow/skill_flow/llm/: __init__.py  copilot_backend.py
projects/skill-flow/skill_flow/models/: __init__.py  core.py
projects/skill-flow/skill_flow/pipeline/: cache.py  cli_pipeline.py  eval_hooks.py  ground_truth.py  models.py  query_gen_init.py  runner.py  stage_helpers.py  stages.py
projects/skill-flow/skill_flow/query_gen/: __init__.py  query_gen.py
projects/skill-flow/skill_flow/reranker/: reranker.py
projects/skill-flow/skill_flow/retriever/: bm25.py  multi_search.py  protocol.py  retriever.py
projects/skill-flow/skill_flow/selector/: selector.py
projects/skill-flow/tests/test_analysis/: test_benchmark_stats.py  test_bootstrap.py  test_generate_case_studies.py  test_generate_quality_proxies.py  test_latency_table.py  test_proportions.py  test_quality_metrics.py  test_retrieval_stats.py
projects/skill-flow/tests/test_benchmark/: __init__.py  test_agents.py  test_agents_base.py  test_agents_skills_injector.py  test_agents_skills_manager.py  test_cli.py  test_config.py  test_runner.py  test_skillflow_eval_agent.py  test_utils.py  test_vercel_skills.py
projects/skill-flow/tests/test_mcp_servers/: test_skill_loader.py  test_skillflow_server.py
projects/skill-flow/tests/test_skill_crawler/: test_base_crawler.py  test_cli.py  test_config.py  test_crawl_commands.py  test_crawl_helpers.py  test_example.py  test_github_downloader.py  test_http.py  test_progress.py  test_skillsmp_api.py  test_skillsmp_scraper.py  test_storage.py
projects/skill-flow/tests/test_skill_flow/: conftest.py  test_bm25.py  test_builder.py  test_config.py  test_corpus_loader.py  test_encoder.py  test_models.py  test_multi_search.py  test_protocol.py  test_query_gen.py  test_reranker.py  test_searcher.py  test_selector.py  test_skillflow.py
(+5021 files in other folders)
