[project]
name = "md-exporter"
version = "3.2.1"
description = "An Agent Skill and Dify plugin to Convert markdown text into files in various formats such as DOCX, XLSX, PDF, PPTX, Mermaid and images."
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "bowenliang123", email = "liang.bowen.123@qq.com" },
]
readme="README.md"

dependencies = [
    "dify_plugin~=0.7.1",
    "markdown>=3.10.1",
    "pandas[excel,html,xml]~=2.3.3",
    "xhtml2pdf~=0.2.17",
    "python-pptx~=1.0.2",
    "PyMuPDF~=1.26.4",
    "pillow~=12.1.0",
    "pypandoc-binary~=1.16.2",
    "nodejs-wheel-binaries>=20.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[project.urls]
Homepage = "https://github.com/bowenliang123/md_exporter/"
Repository = "https://github.com/bowenliang123/md_exporter.git"
Issues = "https://github.com/bowenliang123/md_exporter/issues"
Changelog = "https://github.com/bowenliang123/md_exporter/?tab=readme-ov-file#-changelog"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["dev", "provider", "test", "test_output"]

[tool.setuptools.package-data]
"*" = ["assets/template/docx_template.docx", "assets/template/pptx_template.pptx"]
