[package]
name = "extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
oxc_parser = "0.110.0"
oxc_syntax = "0.110.0"
oxc_span = "0.110.0"
oxc_allocator = "0.110.0"
oxc_ast = "0.110.0"
oxc_ast_visit = "0.110.0"
oxc_codegen = "0.110.0"
oxc_transformer = "0.110.0"
oxc_semantic = "0.110.0"
css = { path = "../css" }
phf = "0.13"
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0"
boa_engine = "0.21"

[dev-dependencies]
insta = "1.46.1"
serial_test = "3.3.1"
rstest = "0.26.1"
