[package]
name = "sheet"
version = "0.1.0"
edition = "2024"

[dependencies]
css = { path = "../css" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.2"
once_cell = "1.21.3"
extractor = { path = "../extractor" }

[dev-dependencies]
insta = "1.46.1"
criterion = { version = "0.8", features = ["html_reports"] }
rstest = "0.26.1"

[[bench]]
name = "my_benchmark"
harness = false
