[package]
name = "devup-ui-wasm"
version = "0.1.0"
authors = ["owjs3901 <owjs3901@naver.com>"]
edition = "2024"
description = "Devup UI WASM bindings"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/devup-ui"
documentation = "https://devup-ui.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"
extractor = { path = "../../libs/extractor" }
sheet = { path = "../../libs/sheet" }
css = { path = "../../libs/css" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.21.3"
js-sys = "0.3.85"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
bimap = { version = "0.6.3", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
serial_test = "3.3.1"
insta = "1.46.1"
rstest = "0.26.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
