[package]
name = "css"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
phf = { version = "0.13", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
bimap = { version = "0.6.3" }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.3.1"
